Fix hero section to allow wrapping

--- a/styles.css
+++ b/styles.css
@@ -56,29 +56,30 @@ a {
 .hero {
     background-color: #1f2937;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
     padding: 30px 100px;
-    height: 250px;
-}
-
-.left-hero, .right-hero{
-    height: 100%;
-    width: 100%;
 }
 
 .left-hero {
-    flex: 1;
+    max-width: 25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .maintext {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+    margin-bottom: 10px;
 }
 
 .subtext {
     font-size: 18px;
     color: #E5E7EB;
+    margin-bottom: 10px;
 }
 
 button {
@@ -86,21 +87,18 @@ button {
     color: #F9FAF8;
     padding: 5px 20px;
     border-radius: 8px;
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .right-hero {
-    flex: 1;
+    max-width: 25rem;
     display: flex;
     align-items: center;
     justify-content: right;
 }
 
 .hero-img {
-    justify-content: center;
     max-width: 100%;
-    max-height: 100%;
-    /* overflow: auto; */
 }
 
 .midsection {
